// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Affix 1`] = `
<div>
  <label
    data-weight="medium"
    for="textfield-affix"
  >
    Hvor mange kroner koster det per måned?
  </label>
  <div>
    <span aria-hidden="true">
      NOK
    </span>
    <input
      id="textfield-affix"
      inputmode="numeric"
    >
    <span aria-hidden="true">
      pr. mnd
    </span>
  </div>
</div>
`;

exports[`Controlled 1`] = `
<div style="display: flex; gap: var(--ds-size-2); align-items: end; width: 100%;">
  <div style="flex-grow: 1;">
    <label
      data-weight="medium"
      for="textfield-controlled"
    >
      Fullt navn
    </label>
    <div>
      <input
        type="text"
        id="textfield-controlled"
        value
      >
    </div>
  </div>
  <button
    data-variant="secondary"
    type="button"
  >
    Tøm feltet
  </button>
</div>
<hr aria-hidden="true">
<p data-variant="default">
  Ditt brukernavn blir da:
</p>
`;

exports[`Counter 1`] = `
<div>
  <label
    data-weight="medium"
    for="textfield-counter"
  >
    Hvor mange kroner koster det per måned?
  </label>
  <div>
    <input
      id="textfield-counter"
<<<<<<< HEAD
      type="text"
=======
      inputmode="numeric"
>>>>>>> 4f94250 (docs: improving textfield for beta)
      aria-describedby="textfield-counter:validation  textfield-counter:description"
    >
  </div>
  <div
    data-field="description"
    aria-live="polite"
    id="textfield-counter:description"
  >
  </div>
  <p
    data-variant="default"
    data-field="validation"
    id="textfield-counter:validation"
  >
    10 tegn igjen
  </p>
</div>
`;

exports[`Disabled 1`] = `
<div>
  <label
    data-weight="medium"
    for="textfield-disabled"
  >
    Disabled Textfield
  </label>
  <div>
    <input
      type="text"
      id="textfield-disabled"
      disabled
    >
  </div>
</div>
<div>
  <label
    data-weight="medium"
    for="textarea-disabled"
  >
    Disabled Textarea
  </label>
  <div>
    <textarea
      id="textarea-disabled"
      rows="4"
      disabled
    >
    </textarea>
  </div>
</div>
`;

exports[`Preview 1`] = `
<div>
  <label
    data-weight="medium"
    for="textfield-preview"
  >
    Label
  </label>
  <div>
    <input
      id="textfield-preview"
      type="text"
    >
  </div>
</div>
`;

exports[`Read Only 1`] = `
<div>
  <label
    data-weight="medium"
    for="textfield-readonly"
  >
    ReadOnly Textfield
  </label>
  <div>
    <input
      type="text"
      id="textfield-readonly"
      readonly
    >
  </div>
</div>
<div>
  <label
    data-weight="medium"
    for="textarea-readonly"
  >
    ReadOnly Textarea
  </label>
  <div>
    <textarea
      id="textarea-readonly"
      rows="4"
      readonly
    >
    </textarea>
  </div>
</div>
`;

exports[`Rows 1`] = `
<div>
  <label
    data-weight="medium"
    for="textfield-rows"
  >
    Beskrivelse
  </label>
  <div>
    <textarea
      rows="4"
      id="textfield-rows"
    >
    </textarea>
  </div>
</div>
`;
